--- a/client/media/contacto.html
+++ b/client/media/contacto.html
@@ -30,7 +30,7 @@
     
                     <div class="container-logo">
                         <!-- <i class="fa-duotone fa-solid fa-gift"></i> -->
-                        <h2 class="logo"> <a class="titulo" href="/">Fragranza</a> </h2>
+                        <h2 class="logo"> <a class="titulo" href="index.html">Fragranza</a> </h2>
                     </div>
     
                     <div class="container-user">
