--- a/client/media/index.html
+++ b/client/media/index.html
@@ -95,6 +95,12 @@
 
     <p class="lanzamiento"> Suscríbete y se el primero en enterarte de lanzamientos, novedades y promociones</p>
 
+    <!-- PRODUCTOS NUEVOS  -->
+    <section id="newProducts">
+        <h2 id="nuevos-productos">Nuevos Productos</h2>
+        <div id="newProductsContainer"></div>
+    </section>
+
     <!-- shop content-->
     <div class="card-products-container">
         <div class="card-products" id="shopContent"></div>
@@ -140,10 +146,17 @@
     </section>
 
 
-    <!-- shop content-->
-    <div class="card-products-container">
-        <div class="card-products" id="shopContent"></div>
-    </div>
+    <section id="newProductsSlider">
+        <h2>Nuevos Productos</h2>
+        <div class="slider-container">
+            <button id="prevButton">⬅️</button>
+            <div class="slider-track" id="sliderTrack">
+                Aquí se cargarán los productos dinámicamente
+            </div>
+            <button id="nextButton">➡️</button>
+        </div>
+    </section> 
+    
 
     <hr>
     <footer class="footer container">
