--- a/client/media/index.html
+++ b/client/media/index.html
@@ -58,8 +58,8 @@
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </button>
                     </form>
-                    
-                    <i  class="fa-solid fa-bars" ></i>
+
+                    <i  class="fa-solid fa-bars menu-icon" ></i>
                     <ul class="menu" id="menu-items">
                         <li> <a href="index.html">Inicio </a> </li>
                         <li> <a href="#">Log In </a> </li>
@@ -230,8 +230,8 @@
             <div class="link">
                 <h3> Contáctanos </h3>
                 <ul>
-                    <li><a href="#">Tél.: +54 9 2604 68-9332</a></li>
-                    <li><a href="#">Tél.: +54 9 2604 09-5114</a></li>
+                    <li><a id="nro-telefono" href="#">Tél.: +54 9 2604 68-9332</a></li>
+                    <li><a id="nro-telefono" href="#">Tél.: +54 9 2604 09-5114</a></li>
                 </ul>
                 <br>
                 <br>
