--- a/client/media/index.html
+++ b/client/media/index.html
@@ -270,6 +270,10 @@
     <!-- Link custom script  -->
     <script src="carrusel.js"></script>
 
+    <script src="navbar.js"></script>
+
+    
+
 </body>
 
 </html>
